# alsa-volume-limiter

./: .gitignore  CMakeLists.txt  README.md  alsa-volume-limiter.service  default_conf.conf  pack-tar.sh
src/: conf.c  conf.h  service.c  set_limit.c
